교육기관 엔티티 수정